--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+        const firebaseConfig = {
+      apiKey: "AIzaSyBoNduJvPOJv25t-leUCOrTgBZ4oES6se8",
+      authDomain: "ficha-605b5.firebaseapp.com",
+      projectId: "ficha-605b5",
+      storageBucket: "ficha-605b5.appspot.com",
+      messagingSenderId: "623597848827",
+      appId: "1:623597848827:web:486a3e6bbf4f58f990085e"
     };
+
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
